@@ -1,5 +1,11 @@
 2007-03-20  Eitan Isaacson  <eitan@ascender.com>
 
+	* src/lib/accerciser/node.py: Fix bug 420774.
+	* src/lib/accerciser/pyLinAcc.zip: Re-packaged with new pyLinAcc 
+	revision (bug 420832).
+
+2007-03-20  Eitan Isaacson  <eitan@ascender.com>
+
 	* src/lib/accerciser/accerciser.py: 
 	* src/lib/accerciser/plugin_manager.py: Fixed bottom pane being always
 	set to 350 no matter what size it was saved at last session.
